New Flexible Grid

--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,15 +1,15 @@
-<div id="blog" class="row">
+<div id="" class="row">
 
-<div id="" class="sixteen columns"></div><!-- /end -->
-	<hr class="sixteen columns">
+<div id="blog" class="sixteen columns"></div><!-- /end -->
+<hr class="sixteen columns divider">
 
 <div id="" class="four columns">
-<h5>FROM THE BLOG</h5>
+<h4>FROM THE BLOG</h4>
 	<p>
 	Catch up on all the latest<br>news about Neptune.
 	</p>
-<span class="glyphs">)</span><h6 class="calltoaction fancylink">SEE MORE</h6>
-	
+<span class="glyphs">)</span><h5 class="calltoaction">SEE MORE</h5>
+<hr class="four columns hide-on-desktops">
 <!-- 	<span class="glyphs fancylink">$</span><h5 class="calltoaction fancylink">SEE MORE</h5> -->
 
 </div><!-- / -->
@@ -22,17 +22,19 @@
 	
 <div class="eight columns article">
 	<h4>BRAND NEW THEME NEPTUNE.</h4>
+	
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco.<span class="readmore">:: read more ::</span>
 	</p>
+
 </div>
 
 <div id="" class="four columns article-aside">
 	<p>23rd January<span class="clock">P</span></p>
-	<a><p class="small">6 comments<span class="comment-bubble">c</span></p></a>
+	<a href="#"><small>6 comments<span class="comment-bubble">c</span></small></a>
 </div><!-- / -->
-
+<hr class="eight columns">
 
 
 
@@ -42,34 +44,109 @@
 
 <div class="eight columns article">
 	<h4>OTHER HEAPS GOOD NEWS.</h4>
+	
 	<p>Exercitation ullamco laboris nisi ut aliquip ex ea commodo
 	consequat. Consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore.<span class="readmore">:: read more ::</span>
 	</p>
+	
 </div>
 
 <div id="" class="four columns article-aside">
-	<p>12th January<span class="clock">P</span></p>
-	<a><p class="small">6 comments<span class="comment-bubble">c</span></p></a>
+	<p>23rd January<span class="clock">P</span></p>
+	<a><small>6 comments<span class="comment-bubble">c</span></small></a>
 </div><!-- / -->
-
+<hr class="eight columns">
 
 
 
 
 <div class="eight columns article">
 	<h4>BRAND NEW THEME NEPTUNE.</h4>
+	
 	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
 	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
 	quis nostrud exercitation ullamco.<span class="readmore">:: read more ::</span>
 	</p>
+	
 </div>
 
 <div id="" class="four columns article-aside">
-	<p>7th January<span class="clock">P</span></p>
-	<a><p class="small">6 comments<span class="comment-bubble">c</span></p></a>
+	<p>23rd January<span class="clock">P</span></p>
+	<a><small>6 comments<span class="comment-bubble">c</span></small></a>
 </div><!-- / -->
+
 
 <br class="clear" />
 </div><!-- /end offset row -->
+
+
+
+
+
+<hr class="sixteen columns divider">
+
+<div class="eight columns">
+	<h4>I'm a h4 tag.</h4>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.</p>
+	<hr>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.<span class="readmore">:: read more ::</span>
+	</p>
+		<h2>I'm a h2 tag.</h2>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.</p>
+		<h6>I'm a h6 tag.</h6>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.</p>
+</div>
+
+
+<div class="eight columns">
+	<h1>I'm a h1 tag.</h1>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.<span class="readmore">:: read more ::</span>
+	</p>
+	<hr>
+	<small>This is some small text. Oh, yeah!</small>
+		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.</p>
+	<h5>I'm a h5 tag.</h5>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.<span class="readmore">:: read more ::</span>
+	</p>
+		<h3>I'm a h3 tag.</h3>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.</p>
+	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+	quis nostrud exercitation ullamco.</p>
+</div>
+
+
+
+
+
+
+
+
+
+
 </div><!-- /end portfolio -->
