--- a/views/portfolio2.erb
+++ b/views/portfolio2.erb
@@ -1,21 +1,20 @@
 <hr class="sixteen columns divider">
-
-<div id="" class="portfolio row">
-
-
+<div id="portfolio" class="portfolio row">
+<div id="" class="sixteen columns"></div><!-- / -->
 
 
-<div id="" class="four columns">
-<h4>PORTFOLIO</h4>
-	<p>A show and tell of what's been
-	keeping us busy.</p>
-<span class="glyphs">)</span><h5 class="calltoaction">SEE MORE</h5>
-	
-<!-- 	<span class="glyphs fancylink">$</span><h5 class="calltoaction fancylink">SEE MORE</h5> -->
-
+<div id="" class="sixteen columns">
+<a href="#"><h4>PORTFOLIO</h4></a>
 </div><!-- / -->
 
-<div class="photogrid row offset-by-four">
+
+
+
+
+
+
+
+<div class="row photogrid">
 
 <div class="four columns">
 	<a href="#" alt="" class="scale-with-grid corners">
@@ -67,12 +66,55 @@
 
 <div class="four columns">
 	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb2.jpg" alt="">
+	</a>
+</div>
+
+<div class="four columns">
+	<a href="#" alt="" class="scale-with-grid corners">
 		<img src="/images/thumb3.jpg" alt="">
 	</a>
 </div>
 
+<div class="four columns">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb1.jpg" alt="">
+	</a>
+</div>
 
+<div class="four columns">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb4.jpg" alt="">
+	</a>
+</div>
+
+<div class="four columns">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb1.jpg" alt="">
+	</a>
+</div>
+
+<div class="four columns">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb2.jpg" alt="">
+	</a>
+</div>
+
+<div class="four columns">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb2.jpg" alt="">
+	</a>
+</div>
+
+<div class="four columns">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb1.jpg" alt="">
+	</a>
+</div>
+
+
+
+
+<br class="clear" />
 </div><!-- /end offset row -->
-
 </div><!-- /end portfolio -->
-
