--- a/public/css/crossbones/baseline.less
+++ b/public/css/crossbones/baseline.less
@@ -57,9 +57,10 @@ small {
 hr {
   height: 0px;
   border: none;
-  border-top: 1px dotted #959595;
+  border-top: 1px solid #959595;
+  border-bottom: 1px solid #eee;
   margin-top: 0em;
-  margin-bottom: 1.7em;
+  margin-bottom: 1.6em;
 }
 
 
