--- a/public/css/crossbones/buttons.less
+++ b/public/css/crossbones/buttons.less
@@ -6,7 +6,7 @@ BUTTONS
 ----------------------------------------------------
 ---------------------------------------------------- */
 .button, #searchsubmit {
-  background: @primary;
+  background: @secondary;
   display: inline-block;
   text-align: center;
   padding: 10px 34px 10px;
