--- a/views/blog.erb
+++ b/views/blog.erb
@@ -1,10 +1,11 @@
+<hr class="sixteen columns spacer">
 <div id="" class="row">
 
-<div id="blog" class="sixteen columns"></div><!-- /end -->
-<hr class="sixteen columns divider">
+
+
 
 <div id="" class="four columns">
-<h4>FROM THE BLOG</h4>
+<h4 class="">FROM THE BLOG</h4>
 	<p>
 	Catch up on all the latest<br>news about Neptune.
 	</p>
@@ -21,17 +22,16 @@
 
 	
 <div class="eight columns article">
-	<h4>BRAND NEW THEME NEPTUNE.</h4>
-	
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.<span class="readmore">:: read more ::</span>
+	<h4 class="highlight">BRAND NEW THEME NEPTUNE.</h4>
+	<p>Exercitation ullamco laboris nisi ut aliquip ex ea commodo
+	consequat. Consectetur adipisicing elit, sed do eiusmod
+	tempor incididunt ut labore.<span class="readmore">:: read more ::</span>
 	</p>
 
 </div>
 
 <div id="" class="four columns article-aside">
-	<p>23rd January<span class="clock">P</span></p>
+	<small>23rd January<span class="clock">P</span></small>
 	<a href="#"><small>6 comments<span class="comment-bubble">c</span></small></a>
 </div><!-- / -->
 <hr class="eight columns">
@@ -81,72 +81,4 @@
 </div><!-- /end offset row -->
 
 
-
-
-
-<hr class="sixteen columns divider">
-
-<div class="eight columns">
-	<h4>I'm a h4 tag.</h4>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.</p>
-	<hr>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.<span class="readmore">:: read more ::</span>
-	</p>
-		<h2>I'm a h2 tag.</h2>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.</p>
-		<h6>I'm a h6 tag.</h6>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.</p><p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.</p>
-</div>
-
-
-<div class="eight columns">
-	<h1>I'm a h1 tag.</h1>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.<span class="readmore">:: read more ::</span>
-	</p>
-	<hr>
-	<small>This is some small text. Oh, yeah!</small>
-		<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.</p>
-	<h5>I'm a h5 tag.</h5>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.<span class="readmore">:: read more ::</span>
-	</p>
-		<h3>I'm a h3 tag.</h3>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco. Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.</p>
-	<p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
-	tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
-	quis nostrud exercitation ullamco.</p>
-</div>
-
-
-
-
-
-
-
-
-
-
-</div><!-- /end portfolio -->
+</div><!-- /end blog -->
