--- a/views/portfolio.erb
+++ b/views/portfolio.erb
@@ -1,4 +1,4 @@
-<hr class="sixteen columns divider">
+<hr class="sixteen columns spacer">
 
 <div id="" class="portfolio row">
 
@@ -6,9 +6,8 @@
 
 
 <div id="" class="four columns">
-<h4>PORTFOLIO</h4>
-	<p>A show and tell of what's been
-	keeping us busy.</p>
+<h4 class="">PORTFOLIO</h4>
+	<p>A show and tell of what's<br>been keeping us busy.</p>
 <span class="glyphs">)</span><h5 class="calltoaction">SEE MORE</h5>
 	
 <!-- 	<span class="glyphs fancylink">$</span><h5 class="calltoaction fancylink">SEE MORE</h5> -->
