--- a/views/slideshow2.erb
+++ b/views/slideshow2.erb
@@ -6,33 +6,30 @@
 <ul class="slides">
 			    
 	<li class="row frame">
-		<div id="" class="two-thirds column img-anim-1xxx">
-			<img src="/images/map.png" alt="">
+		<div id="" class="sixteen columns img-anim-1xxx">
+			<img src="/images/slate.jpg" alt="">
 		</div>	
-		<div id="" class="text-anim-1 one-third column infotext">			
-				
+		<div id="" class="text-anim-1 twelve columns offset-by-two">							
+				<h3 class="highlight">RESPONSIVE GRID.</h3>
+				<p>Cloudberry is an interactive design firm in New York City helping Fortune 500 companies provide online experiences that drive strategic business outcomes.</p>
+		</div><!-- / -->
+	</li>
+
+	<li class="row frame">
+		<div id="" class="sixteen columns img-anim-1xxx">
+			<img src="/images/slate2.jpg" alt="">
+		</div>	
+		<div id="" class="text-anim-1 twelve columns offset-by-two">							
 				<h3 class="highlight">RESPONSIVE GRID.</h3>
 				<p>Cloudberry is an interactive design firm in New York City helping Fortune 500 companies provide online experiences that drive strategic business outcomes.</p>
 		</div><!-- / -->
 	</li>
 
 		<li class="row frame">
-		<div id="" class="two-thirds column img-anim-1xxx">
-			<img src="/images/map.png" alt="">
+		<div id="" class="sixteen columns img-anim-1xxx">
+			<img src="/images/slate3.jpg" alt="">
 		</div>	
-		<div id="" class="text-anim-1 one-third column infotext">			
-				
-				<h3 class="highlight">MODULAR.</h3>
-				<p>Cloudberry is an interactive design firm in New York City helping Fortune 500 companies provide online experiences that drive strategic business outcomes.</p>
-				<a class="button radius">VISIT SITE</a>
-		</div><!-- / -->
-	</li>
-
-	<li class="row frame">
-		<div id="" class="two-thirds column img-anim-1xxx">
-			<img src="/images/map.png" alt="">
-		</div>	
-		<div id="" class="text-anim-1 one-third column infotext">						
+		<div id="" class="text-anim-1 twelve columns offset-by-two">							
 				<h3 class="highlight">RESPONSIVE GRID.</h3>
 				<p>Cloudberry is an interactive design firm in New York City helping Fortune 500 companies provide online experiences that drive strategic business outcomes.</p>
 		</div><!-- / -->
@@ -45,7 +42,7 @@
 </div><!-- /end flexslider -->
 </div><!-- /end slider -->
 
-<div id="" class="flex-container sixteen columns">
+<div id="" class="flex-container sixteen columns ">
 </div><!-- /end slider controls -->	
 
 
