--- a/public/css/crossbones/nav-centre.less
+++ b/public/css/crossbones/nav-centre.less
@@ -26,7 +26,7 @@ CENTERED MENU
    right:50%;
 }
 #centeredmenu ul li {
-   margin:0 15px 0 25px;
+   margin:0 1em 0 2em;
    padding: 0 0px;
    float:left;
    position:relative;
@@ -41,7 +41,8 @@ CENTERED MENU
    text-decoration:none;
    color:@primary;
    font-weight:bold;
-   transition: all 2s linear;-webkit-transition: all .2s ease-out;
+   transition: background 2s linear;
+   -webkit-transition: background .2s ease-out;
    border-radius: 2px;
 }
 #centeredmenu ul li.active a {
@@ -51,11 +52,23 @@ CENTERED MENU
 #centeredmenu ul li a:hover {
    background:url(@pattern) @background fixed;
    color: @primary;
+   -webkit-border-top-left-radius: 2px;
+   -webkit-border-top-right-radius: 2px;
+   -moz-border-radius-topleft: 2px;
+   -moz-border-radius-topright: 2px;
+   border-top-left-radius: 2px;
+   border-top-right-radius: 2px;
 }
 #centeredmenu ul li:hover a,
 #centeredmenu ul li.hover a { /* This line is required for IE 6 and below */
    background:url(@pattern) repeat @background fixed;
    color:@primary;
+      -webkit-border-top-left-radius: 2px;
+   -webkit-border-top-right-radius: 2px;
+   -moz-border-radius-topleft: 2px;
+   -moz-border-radius-topright: 2px;
+   border-top-left-radius: 2px;
+   border-top-right-radius: 2px;
 }
 
 /* Submenu items */
@@ -81,14 +94,6 @@ CENTERED MENU
   border-bottom: 0;
 }
 
-#centeredmenu ul ul li:first-child {
-
-
-}
-/*#centeredmenu ul ul li:last-child {
-  border-bottom: @border solid @background;
-}*/
-
 #centeredmenu ul ul li a,
 #centeredmenu ul li.active li a,
 #centeredmenu ul li:hover ul li a,
@@ -105,7 +110,7 @@ CENTERED MENU
 #centeredmenu ul li:hover ul li a:hover,
 #centeredmenu ul li.hover ul li a:hover { /* This line is required for IE 6 and below */
    color: @primary;
-   background:url(@pattern) @highlight fixed;
+   background: @highlight;
 }
 
 /* Flip the last submenu so it stays within the page */
