--- a/views/layout.erb
+++ b/views/layout.erb
@@ -17,12 +17,12 @@
 	<div class="container">
 
 	      <header class="sixteen columns">
-         <h2 id="logo" class="textcenter">⎈</h2>
-         <h6 id="sitename" class="textcenter">NEPTUNE</h6>  
+         <h1 id="logo" class="textcenter">⎈</h1>
+         <h4 id="sitename" class="textcenter">NEPTUNE</h4>  
       </header>
 
 
-
+      <hr class="sixteen columns no-margin">
       <nav id="navigation" class="sixteen columns">         
       	<div id="centeredmenu" class="">
       		<ul id="" class="">
