--- a/views/portfolio2.erb
+++ b/views/portfolio2.erb
@@ -1,11 +1,8 @@
-<hr class="sixteen columns divider">
+<hr class="sixteen columns spacer">
 <div id="portfolio" class="portfolio row">
-<div id="" class="sixteen columns"></div><!-- / -->
 
 
-<div id="" class="sixteen columns">
-<a href="#"><h4>PORTFOLIO</h4></a>
-</div><!-- / -->
+
 
 
 
@@ -16,101 +13,38 @@
 
 <div class="row photogrid">
 
-<div class="four columns">
+<div class="one-third column purple">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb4.jpg" alt="">
+	</a>
+</div>
+<div class="one-third column purple">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb3.jpg" alt="">
+	</a>
+</div>
+<div class="one-third column purple">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb1.jpg" alt="">
+	</a>
+</div>
+<div class="one-third column purple">
 	<a href="#" alt="" class="scale-with-grid corners">
 		<img src="/images/thumb2.jpg" alt="">
 	</a>
 </div>
-
-<div class="four columns">
+<div class="one-third column purple">
+	<a href="#" alt="" class="scale-with-grid corners">
+		<img src="/images/thumb4.jpg" alt="">
+	</a>
+</div>
+<div class="one-third column purple">
 	<a href="#" alt="" class="scale-with-grid corners">
 		<img src="/images/thumb3.jpg" alt="">
 	</a>
 </div>
 
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb1.jpg" alt="">
-	</a>
-</div>
 
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb4.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb1.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb1.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb3.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb1.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb4.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb1.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb2.jpg" alt="">
-	</a>
-</div>
-
-<div class="four columns">
-	<a href="#" alt="" class="scale-with-grid corners">
-		<img src="/images/thumb1.jpg" alt="">
-	</a>
-</div>
 
 
 
